--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
           <div class="detail-box pr-md-2">
             <div class="heading_container">
               <h2 class="">
-                About Us
+                il s'apppelle babouddo
               </h2>
             </div>
             <p class="detail_p_mt">
