--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <div class="detail-box">
                     <h1>
                       We Provide <br>
-                      Welding Services
+                      Hack the world
                     </h1>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed tempora praesentium commodi error, hic recusandae repudiandae neque ad molestias, atque veritatis labore quae eveniet autem in
