--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 <div class="col-lg-10 col-md-11 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      We Provide <br>
-                      Hack the world
+                      Raitra  <br>
+                      Forybe
                     </h1>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis fugit, sed tempora praesentium commodi error, hic recusandae repudiandae neque ad molestias, atque veritatis labore quae eveniet autem in
